--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-pdf/renderer": "^2.1.1",
+    "assert": "^2.0.0",
     "bcryptjs": "^2.4.3",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
@@ -23,7 +27,10 @@
     "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
     "node": "^17.7.2",
+    "process": "^0.11.10",
     "rowdy-logger": "^1.0.2",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.4",
     "yaml": "^2.0.0"
   }
 }
