--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-pdf/renderer": "^2.1.1",
     "assert": "^2.0.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "colors": "^1.4.0",
@@ -21,6 +22,7 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongo": "^0.1.0",
     "mongodb": "^4.5.0",
